--- a/samples/gateways/istio-egressgateway/role.yaml
+++ b/samples/gateways/istio-egressgateway/role.yaml
@@ -12,23 +12,24 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# Role and RoleBinding allow the gateway to access certificates
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: istio-egressgateway-sds
+  name: istio-egressgateway
 rules:
-  - apiGroups: [""]
-    resources: ["secrets"]
-    verbs: ["get", "watch", "list"]
+- apiGroups: [""]
+  resources: ["secrets"]
+  verbs: ["get", "watch", "list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: istio-egressgateway-sds
+  name: istio-egressgateway
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
   name: istio-egressgateway-sds
 subjects:
-  - kind: ServiceAccount
-    name: istio-egressgateway-service-account
+- kind: ServiceAccount
+  name: istio-egressgateway-service-account
