Fix double image

--- a/samples/online-boutique/kubernetes-manifests/deployments/checkoutservice.yaml
+++ b/samples/online-boutique/kubernetes-manifests/deployments/checkoutservice.yaml
@@ -29,7 +29,7 @@ spec:
       serviceAccountName: checkout
       containers:
         - name: server
-          image: image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.2.2
+          image: gcr.io/google-samples/microservices-demo/checkoutservice:v0.2.2
           ports:
           - containerPort: 5050
           readinessProbe:
