--- a/samples/online-boutique/kubernetes-manifests/deployments/frontend.yaml
+++ b/samples/online-boutique/kubernetes-manifests/deployments/frontend.yaml
@@ -31,7 +31,7 @@ spec:
       serviceAccountName: frontend
       containers:
         - name: server
-          image: image: gcr.io/google-samples/microservices-demo/frontend:v0.2.2
+          image: gcr.io/google-samples/microservices-demo/frontend:v0.2.2
           ports:
           - containerPort: 8080
           readinessProbe:
