--- a/samples/online-boutique/kubernetes-manifests/deployments/adservice.yaml
+++ b/samples/online-boutique/kubernetes-manifests/deployments/adservice.yaml
@@ -30,7 +30,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
         - name: server
-          image: image: gcr.io/google-samples/microservices-demo/adservice:v0.2.2
+          image: gcr.io/google-samples/microservices-demo/adservice:v0.2.2
           ports:
             - containerPort: 9555
           env:
