--- a/samples/online-boutique/kubernetes-manifests/deployments/currencyservice.yaml
+++ b/samples/online-boutique/kubernetes-manifests/deployments/currencyservice.yaml
@@ -30,7 +30,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: image: gcr.io/google-samples/microservices-demo/currencyservice:v0.2.2
+        image: gcr.io/google-samples/microservices-demo/currencyservice:v0.2.2
         ports:
         - name: grpc
           containerPort: 7000
