--- a/samples/online-boutique/kubernetes-manifests/deployments/paymentservice.yaml
+++ b/samples/online-boutique/kubernetes-manifests/deployments/paymentservice.yaml
@@ -30,7 +30,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: image: gcr.io/google-samples/microservices-demo/paymentservice:v0.2.2
+        image: gcr.io/google-samples/microservices-demo/paymentservice:v0.2.2
         ports:
         - containerPort: 50051
         env:
