--- a/samples/online-boutique/kubernetes-manifests/deployments/productcatalogservice.yaml
+++ b/samples/online-boutique/kubernetes-manifests/deployments/productcatalogservice.yaml
@@ -30,7 +30,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: image: gcr.io/google-samples/microservices-demo/productcatalogservice:v0.2.2
+        image: gcr.io/google-samples/microservices-demo/productcatalogservice:v0.2.2
         ports:
         - containerPort: 3550
         env:
