--- a/samples/online-boutique/kubernetes-manifests/deployments/recommendationservice.yaml
+++ b/samples/online-boutique/kubernetes-manifests/deployments/recommendationservice.yaml
@@ -30,7 +30,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: server
-        image: image: gcr.io/google-samples/microservices-demo/recommendationservice:v0.2.2
+        image: gcr.io/google-samples/microservices-demo/recommendationservice:v0.2.2
         ports:
         - containerPort: 8080
         readinessProbe:
