--- a/asm/control-plane-revision/cr_stable.yaml
+++ b/asm/control-plane-revision/cr_stable.yaml
@@ -8,6 +8,7 @@ metadata:
     mesh.cloud.google.com/managed-cni-enabled: "false" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.use-managed-cni"}
   annotations:
     mesh.cloud.google.com/image: "" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-mcp-image"}
+    mesh.cloud.google.com/vpcsc: "false" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.managed-controlplane.vpcsc.enabled"}
 spec:
   type: managed_service
   channel: stable
