--- a/asm/control-plane-revision/cr_stable.yaml
+++ b/asm/control-plane-revision/cr_stable.yaml
@@ -5,6 +5,7 @@ metadata:
   name: asm-managed-stable
   namespace: istio-system
   labels:
+    mesh.googleapis.com/managed-cni-enabled: "false" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.use-managed-cni"}
     mesh.cloud.google.com/managed-cni-enabled: "false" # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.use-managed-cni"}
   annotations:
     mesh.cloud.google.com/image: "" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-mcp-image"}
