--- a/samples/gateways/istio-ingressgateway/deployment.yaml
+++ b/samples/gateways/istio-ingressgateway/deployment.yaml
@@ -17,6 +17,7 @@ kind: Deployment
 metadata:
   name: istio-ingressgateway
 spec:
+  replicas: 3
   selector:
     matchLabels:
       app: istio-ingressgateway
@@ -51,7 +52,7 @@ kind: PodDisruptionBudget
 metadata:
   name: istio-ingressgateway
 spec:
-  minAvailable: 1
+  maxUnavailable: 1
   selector:
     matchLabels:
       istio: ingressgateway
@@ -70,7 +71,7 @@ spec:
       name: cpu
       targetAverageUtilization: 80
     type: Resource
-  minReplicas: 2
+  minReplicas: 3
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
