use v1beta1 for CPR CR

--- a/asm/control-plane-revision/cr_rapid.yaml
+++ b/asm/control-plane-revision/cr_rapid.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: mesh.cloud.google.com/v1alpha1
+apiVersion: mesh.cloud.google.com/v1beta1
 kind: ControlPlaneRevision
 metadata:
   name: asm-managed-rapid
