--- a/asm/istio/options/cni-managed.yaml
+++ b/asm/istio/options/cni-managed.yaml
@@ -12,6 +12,21 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ---
+apiVersion: v1
+kind: ResourceQuota
+metadata:
+  name: istio-cni-resource-quota
+  namespace: istio-system
+spec:
+  hard:
+    pods: 5000
+  scopeSelector:
+    matchExpressions:
+    - operator: In
+      scopeName: PriorityClass
+      values:
+      - system-node-critical
+---
 # yamllint disable rule:line-length
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -134,7 +149,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: istio-cni
-  namespace: kube-system
+  namespace: istio-system
   labels:
     app: istio-cni
     release: istio
@@ -183,7 +198,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: istio-cni
-  namespace: kube-system
+  namespace: istio-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -194,7 +209,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: istio-cni
-  namespace: kube-system
+  namespace: istio-system
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -264,7 +279,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: istio-cni
-  namespace: kube-system
+  namespace: istio-system
 roleRef:
   kind: ClusterRole
   name: mdp-controller
@@ -274,7 +289,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: istio-cni-config
-  namespace: kube-system
+  namespace: istio-system
   labels:
     app: istio-cni
     release: istio
@@ -298,7 +313,7 @@ kind: DaemonSet
 apiVersion: apps/v1
 metadata:
   name: istio-cni-node
-  namespace: kube-system
+  namespace: istio-system
   labels:
     k8s-app: istio-cni-node
     release: istio
@@ -326,6 +341,7 @@ spec:
         prometheus.io/scrape: 'true'
         prometheus.io/port: "15014"
         prometheus.io/path: '/metrics'
+        autopilot.gke.io/no-connect: "true"
         # Custom annotations
     spec:
       nodeSelector:
@@ -350,7 +366,7 @@ spec:
       # and CNI network config file on each node.
       - name: install-cni
         # yamllint disable-line rule:line-length
-        image: "IMAGE_HUB/install-cni:IMAGE_TAG"  # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-cni-image"}
+        image: "gcr.io/gke-release/asm/install-cni:1.11.2-asm.18"  # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-cni-image"}
         livenessProbe:
           httpGet:
             path: /healthz
@@ -403,7 +419,7 @@ spec:
           name: cni-log-dir
       - name: mdp-controller
         # yamllint disable-line rule:line-length
-        image: "IMAGE_HUB/mdp:IMAGE_TAG"  # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-mdp-image"}
+        image: "gcr.io/gke-release/asm/mdp:1.11.2-asm.18"  # {"$ref":"#/definitions/io.k8s.cli.substitutions.gke-mdp-image"}
         command:
         - mdp
         - server
