--- a/asm/control-plane-revision/crd.yaml
+++ b/asm/control-plane-revision/crd.yaml
@@ -15,7 +15,17 @@ spec:
     singular: controlplanerevision
   scope: Namespaced
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - jsonPath: .status.conditions[?(@.type=="Reconciled")].status
+      name: Reconciled
+      type: string
+    - jsonPath: .status.conditions[?(@.type=="Stalled")].status
+      name: Stalled
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: ControlPlaneRevision is the Schema for the ControlPlaneRevision
@@ -87,7 +97,17 @@ spec:
     storage: true
     subresources:
       status: {}
-  - name: v1beta1
+  - additionalPrinterColumns:
+    - jsonPath: .status.conditions[?(@.type=="Reconciled")].status
+      name: Reconciled
+      type: string
+    - jsonPath: .status.conditions[?(@.type=="Stalled")].status
+      name: Stalled
+      type: string
+    - jsonPath: .metadata.creationTimestamp
+      name: Age
+      type: date
+    name: v1beta1
     schema:
       openAPIV3Schema:
         description: ControlPlaneRevision is the Schema for the ControlPlaneRevision
@@ -165,3 +185,4 @@ status:
     plural: ""
   conditions: []
   storedVersions: []
+
