--- a/asm/canonical-service/controller.yaml
+++ b/asm/canonical-service/controller.yaml
@@ -7,12 +7,12 @@ metadata:
     gke.io/cluster: "gke://PROJECT_ID/us-central1-c/asm-cluster" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
   name: asm-system
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
     gke.io/cluster: "gke://PROJECT_ID/us-central1-c/asm-cluster" # {"$ref":"#/definitions/io.k8s.cli.substitutions.gkeio-cluster"}
+    controller-gen.kubebuilder.io/version: (unknown)
   creationTimestamp: null
   name: canonicalservices.anthos.cloud.google.com
 spec:
@@ -23,93 +23,95 @@ spec:
     plural: canonicalservices
     singular: canonicalservice
   scope: Namespaced
-  validation:
-    openAPIV3Schema:
-      description: CanonicalService is the Schema for the canonicalservices API
-      properties:
-        apiVersion:
-          description: 'APIVersion defines the versioned schema of this representation
-            of an object. Servers should convert recognized schemas to the latest
-            internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-          type: string
-        kind:
-          description: 'Kind is a string value representing the REST resource this
-            object represents. Servers may infer this from the endpoint the client
-            submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
-          type: string
-        metadata:
-          type: object
-        spec:
-          description: CanonicalServiceSpec defines the desired state of CanonicalService
-          properties:
-            description:
-              description: Description of the service
-              maxLength: 500
-              minLength: 0
-              type: string
-            displayName:
-              description: Human-friendly name of the service
-              maxLength: 100
-              minLength: 0
-              type: string
-          type: object
-        status:
-          description: CanonicalServiceStatus defines the observed state of CanonicalService
-          properties:
-            inactiveSince:
-              description: The time that the service was set to Inactive (if the service
-                is Active, will be empty)
-              format: date-time
-              type: string
-            resourceTypes:
-              description: Array of the resource types the service is currently found
-                on
-              items:
-                description: Struct representing the types of resource a Canonical
-                  Service has been run on. It includes information about whether the
-                  resource is currently in use by the service, so that we can track
-                  resources that might still have valuable metrics but are not active.
-                properties:
-                  inactiveSince:
-                    format: date-time
-                    type: string
-                  name:
-                    enum:
-                    - Pod
-                    - WorkloadEntry
-                    type: string
-                  state:
-                    description: CanonicalServiceState tells us whether the service
-                      is currently Active (aka there is at least one Pod or WorkloadEntry
-                      running this service) or Inactive.
-                    enum:
-                    - Active
-                    - Inactive
-                    - Error
-                    type: string
-                required:
-                - name
-                - state
-                type: object
-              type: array
-            resourceVersionWhenBecameInactive:
-              description: The resource version of the Canonical Service resource
-                when it was marked Inactive
-              type: string
-            state:
-              description: Current state of the service
-              enum:
-              - Active
-              - Inactive
-              - Error
-              type: string
-          required:
-          - state
-          type: object
-      type: object
-  version: v1beta1
   versions:
   - name: v1beta1
+    schema:
+      openAPIV3Schema:
+        description: CanonicalService is the Schema for the canonicalservices API
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation
+              of an object. Servers should convert recognized schemas to the latest
+              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this
+              object represents. Servers may infer this from the endpoint the client
+              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: CanonicalServiceSpec defines the desired state of CanonicalService
+            properties:
+              description:
+                description: Description of the service
+                maxLength: 500
+                minLength: 0
+                type: string
+              displayName:
+                description: Human-friendly name of the service
+                maxLength: 100
+                minLength: 0
+                type: string
+            type: object
+          status:
+            description: CanonicalServiceStatus defines the observed state of CanonicalService
+            properties:
+              inactiveSince:
+                description: The time that the service was set to Inactive (if the
+                  service is Active, will be empty)
+                format: date-time
+                type: string
+              resourceTypes:
+                description: Array of the resource types the service is currently
+                  found on
+                items:
+                  description: CanonicalServiceResourceType represents the types of
+                    resource a Canonical Service has been run on. It includes information
+                    about whether the resource is currently in use by the service,
+                    so that we can track resources that might still have valuable
+                    metrics but are not active.
+                  properties:
+                    inactiveSince:
+                      format: date-time
+                      type: string
+                    name:
+                      description: CanonicalServiceResourceTypeName is the name of
+                        the resource type
+                      enum:
+                      - Pod
+                      - WorkloadEntry
+                      type: string
+                    state:
+                      description: CanonicalServiceState tells us whether the service
+                        is currently Active (aka there is at least one Pod or WorkloadEntry
+                        running this service) or Inactive.
+                      enum:
+                      - Active
+                      - Inactive
+                      - Error
+                      type: string
+                  required:
+                  - name
+                  - state
+                  type: object
+                type: array
+              resourceVersionWhenBecameInactive:
+                description: The resource version of the Canonical Service resource
+                  when it was marked Inactive
+                type: string
+              state:
+                description: Current state of the service
+                enum:
+                - Active
+                - Inactive
+                - Error
+                type: string
+            required:
+            - state
+            type: object
+        type: object
     served: true
     storage: true
 status:
@@ -199,7 +201,7 @@ rules:
   - list
   - watch
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: canonical-service-metrics-reader
@@ -310,6 +312,13 @@ spec:
         - --v=10
         image: gcr.io/kubebuilder/kube-rbac-proxy:v0.5.0
         name: kube-rbac-proxy
+        resources:
+          limits:
+            cpu: 100m
+            memory: 300Mi
+          requests:
+            cpu: 10m
+            memory: 20Mi
         ports:
         - containerPort: 8443
           name: https
@@ -318,12 +327,12 @@ spec:
         - --enable-leader-election
         command:
         - /manager
-        image: gcr.io/gke-release/asm/canonical-service-controller:1.7.3-asm.6 # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.canonicalServiceHub"}
+        image: gcr.io/gke-release/asm/canonical-service-controller:1.10.3-asm.16 # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.canonicalServiceHub"}
         name: manager
         resources:
           limits:
             cpu: 100m
-            memory: 100Mi
+            memory: 300Mi
           requests:
             cpu: 10m
             memory: 20Mi
