--- a/asm/istio/options/prometheus-and-stackdriver.yaml
+++ b/asm/istio/options/prometheus-and-stackdriver.yaml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START docs]
 ---
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
@@ -25,3 +26,4 @@ spec:
           enabled: true
         stackdriver:
           enabled: true
+# [END docs]
