--- a/samples/gateways/istio-ingressgateway/service.yaml
+++ b/samples/gateways/istio-ingressgateway/service.yaml
@@ -15,6 +15,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: istio-ingressgateway
+  annotations:
+    networking.gke.io/load-balancer-type: "Internal"
   labels:
     app: istio-ingressgateway
     istio: ingressgateway
