--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "private": true,
+    "private": false,
     "devDependencies": {
         "bats": "^1.3.0",
         "bats-assert": "^2.0.0"
