--- a/asm/istio/expansion/vm-eastwest-gateway.yaml
+++ b/asm/istio/expansion/vm-eastwest-gateway.yaml
@@ -19,7 +19,7 @@ metadata:
   name: eastwest
 spec:
   profile: empty
-  hub: gcr.io/gke-release/asm # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.hub"}
+  hub: gke.gcr.io/asm # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.hub"}
   tag: 1.10.2-asm.1 # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.tag"}
   components:
     ingressGateways:
