--- a/asm/istio/options/managed-control-plane.yaml
+++ b/asm/istio/options/managed-control-plane.yaml
@@ -18,7 +18,7 @@ kind: IstioOperator
 spec:
   revision: "asm-managed"
   profile: asm-gcp
-  hub: gcr.io/gke-release/asm # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.hub"}
+  hub: gke.gcr.io/asm # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.hub"}
   tag: 1.10.2-asm.1 # {"$ref":"#/definitions/io.k8s.cli.setters.anthos.servicemesh.tag"}
   components:
     base:
