Update cni-baremetal-rhel.yaml add spc_t seLinuxOption
Adding this for fixing the ongoing cni daemonset failing issue, due to privilege being set to false in securityContext

--- a/asm/istio/options/cni-baremetal-rhel.yaml
+++ b/asm/istio/options/cni-baremetal-rhel.yaml
@@ -21,9 +21,15 @@ spec:
     cni:
       enabled: true
       namespace: kube-system
+      k8s:
+        overlays:
+        - kind: DaemonSet
+          name: istio-cni-node
+          patches:
+          - path: spec.template.spec.containers.[name:install-cni].securityContext.seLinuxOptions
+            value: {"type": "spc_t"}
   values:
     cni:
-      privileged: true
       cniBinDir: /opt/cni/bin
       excludeNamespaces:
       - istio-system
